[gd_scene load_steps=23 format=2]

[ext_resource path="res://games/pawn_game/main/pawn_game_ui.gd" type="Script" id=1]
[ext_resource path="res://games/pawn_game/ui/map_editor/map_editor.tscn" type="PackedScene" id=2]
[ext_resource path="res://games/pawn_game/main/pawn_game_cam.gd" type="Script" id=3]
[ext_resource path="res://games/pawn_game/main/pawn_game_map.gd" type="Script" id=4]
[ext_resource path="res://games/pawn_game/main/pawn_game_main.gd" type="Script" id=5]
[ext_resource path="res://games/pawn_game/main/pawn_game_world.gd" type="Script" id=6]
[ext_resource path="res://games/pawn_game/main/preview_tiles.gd" type="Script" id=7]
[ext_resource path="res://games/pawn_game/main/world_ui.gd" type="Script" id=8]
[ext_resource path="res://games/pawn_game/main/interact_popup.gd" type="Script" id=9]
[ext_resource path="res://games/pawn_game/main/pawn_controller.gd" type="Script" id=10]
[ext_resource path="res://games/pawn_game/main/player_pawn_manager/player_pawn_manager.tscn" type="PackedScene" id=11]
[ext_resource path="res://games/pawn_game/main/astar_nav.gd" type="Script" id=12]
[ext_resource path="res://games/pawn_game/ui/shop_ui/shop_ui.tscn" type="PackedScene" id=13]
[ext_resource path="res://games/pawn_game/ui/resources_ui/resources_ui.tscn" type="PackedScene" id=14]
[ext_resource path="res://games/pawn_game/main/map_generator.gd" type="Script" id=15]
[ext_resource path="res://games/pawn_game/main/job_manager.gd" type="Script" id=16]
[ext_resource path="res://games/pawn_game/main/pawn_game_blueprints.gd" type="Script" id=17]
[ext_resource path="res://games/pawn_game/ui/blueprint_ui/blueprint_ui.gd" type="Script" id=18]
[ext_resource path="res://games/pawn_game/main/preview_blueprints.gd" type="Script" id=19]
[ext_resource path="res://games/pawn_game/main/menu_buttons.gd" type="Script" id=20]
[ext_resource path="res://games/pawn_game/ui/common/buttons/tile_button/tile_button.tscn" type="PackedScene" id=21]
[ext_resource path="res://games/pawn_game/ui/blueprint_ui/blueprint_buttons.gd" type="Script" id=22]

[node name="pawn_game_main" type="Node2D"]
script = ExtResource( 5 )
tile_resource_dir = "res://games/pawn_game/map_components/tiles/tile_resources"
release_mode_enabled = false

[node name="pawn_game_cam" type="Camera2D" parent="."]
current = true
script = ExtResource( 3 )

[node name="pawn_game_world" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="astar_nav" type="Node" parent="pawn_game_world"]
script = ExtResource( 12 )

[node name="pawn_game_map" type="Node2D" parent="pawn_game_world"]
script = ExtResource( 4 )
main_path = NodePath("../..")
tiles_per_frame = 100

[node name="pawn_game_blueprints" type="Node2D" parent="pawn_game_world"]
script = ExtResource( 17 )

[node name="map_generator" type="Node" parent="pawn_game_world"]
script = ExtResource( 15 )
width = 125
height = 125
use_fixed_seed = true
water_threshold = -0.4

[node name="pawn_controller" type="Node2D" parent="pawn_game_world"]
script = ExtResource( 10 )

[node name="player_pawn_manager" parent="pawn_game_world/pawn_controller" instance=ExtResource( 11 )]

[node name="job_manager" type="Node2D" parent="pawn_game_world"]
script = ExtResource( 16 )

[node name="world_ui" type="Node2D" parent="."]
z_index = 5
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="preview_tiles" type="Node2D" parent="world_ui"]
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}
main_path = NodePath("../..")

[node name="preview_blueprints" type="Node2D" parent="world_ui"]
script = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}
main_path = NodePath("../..")

[node name="pawn_game_ui" type="CanvasLayer" parent="."]
script = ExtResource( 1 )
main_path = NodePath("..")
map_editor_path = NodePath("map_editor")
blueprint_ui_path = NodePath("blueprint_ui")
shop_ui_path = NodePath("shop_ui")
menu_buttons_path = NodePath("menu_buttons")
resources_ui_path = NodePath("margin/resources_ui")
interact_popup_path = NodePath("interact_popup")

[node name="margin" type="MarginContainer" parent="pawn_game_ui"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resources_ui" parent="pawn_game_ui/margin" instance=ExtResource( 14 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0

[node name="map_editor" parent="pawn_game_ui" instance=ExtResource( 2 )]
visible = false
mouse_filter = 2
main_path = NodePath("../..")
pawn_game_ui_path = NodePath("..")
map_path = NodePath("../../pawn_game_world/pawn_game_map")

[node name="blueprint_ui" type="Control" parent="pawn_game_ui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blueprint_buttons" type="HBoxContainer" parent="pawn_game_ui/blueprint_ui"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -80.0
margin_right = -10.0
margin_bottom = -30.0
mouse_filter = 2
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tile_button" parent="pawn_game_ui/blueprint_ui/blueprint_buttons" instance=ExtResource( 21 )]
margin_right = 12.0

[node name="shop_ui" parent="pawn_game_ui" instance=ExtResource( 13 )]
visible = false
anchor_top = 1.0
pawn_price = 10

[node name="menu_buttons" type="HBoxContainer" parent="pawn_game_ui"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
mouse_filter = 2
script = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="blueprint_ui" type="Button" parent="pawn_game_ui/menu_buttons"]
margin_right = 93.0
margin_bottom = 20.0
text = "Construction"

[node name="shop_ui" type="Button" parent="pawn_game_ui/menu_buttons"]
margin_left = 97.0
margin_right = 177.0
margin_bottom = 20.0
text = "Pawn Shop"

[node name="map_editor" type="Button" parent="pawn_game_ui/menu_buttons"]
margin_left = 181.0
margin_right = 374.0
margin_bottom = 20.0
text = "Super Secret Dev Map Editor"

[node name="interact_popup" type="PopupMenu" parent="pawn_game_ui"]
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 12
size_flags_vertical = 12
script = ExtResource( 9 )
